<resources>
    <string name="app_name">Weather Forecast</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="setting_fragment">Setting</string>
    <string name="favourite_fragment">Favourite</string>
    <string name="alert_fragment">Alert</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_maps">Map</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="dropped_pin">dropped_pin</string>
    <string name="Rain">Rain</string>
    <string name="Temperature">Temperature</string>
    <string name="Wind">Wind</string>
    <string name="fog_mist_haze">Fog/Mist/Haze</string>
    <string name="snow">Snow</string>
    <string name="cloud">Cloud</string>
    <string name="ThunderStorm">ThunderStorm</string>
    <string name="CheckEvent">Check Event</string>
    <string name="Notification">Notification</string>
    <string name="DefaultAlarmSound">Default Sound</string>
    <string name="AlarmType">Type</string>
    <string name="yes">Yes</string>
    <string name="deletAlarm">Delete Alarm</string>
    <string name="no">No</string>
    <string-array name="alarmType_array">
        <item>Notification</item>
        <item>Default Sound</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_weather_data_for_fav_locations">WeatherDataForFavLocations</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="Day">Day</string>
    <string name="Night">Night</string>
    <string name="humidity">Humidity</string>
    <string name="precipition">precipitation</string>
    <string name="Pressure">Pressure</string>
    <string name="WindSpeed">WindSpeed</string>
    <string name="CloudCover">Cloud Cover</string>
    <string name="Visibility">Visibility</string>
    <string name="Cancel">Cancel</string>
    <string name="Save">Save</string>
    <string name="home_fragment">Home</string>
    <string name="Location">Location</string>
    <string name="ChooseLocation">Choose Location</string>
    <string name="Units">Units</string>
    <string name="ChooseUnitOfTemperature">Choose Unit Of Temperature</string>
    <string name="ChooseUnitOfWindSpeed">Choose Unit Of Wind Speed</string>
    <string name="Language">Language</string>
    <string name="ChooseLanguage">Choose Language</string>
    <string name="searchbar">search bar</string>
    <string name="DetermineLocationWithGPSOrSearch">Determine Location With GPS Or Search</string>
    <string name="HourlyForecast">Hourly Forecast</string>
    <string name="DailyForecast">Daily Forecast</string>
    <string name="Details">Details</string>
    <string name="LocationChosen">Location Chosen</string>
    <string name="once">Once</string>
    <string name="Two">Twice</string>
    <string name="Three">Three</string>
    <string name="Repeat">Repeatedly</string>

</resources>