<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="CatLocation"
        android:layout_width="match_parent"
        android:icon="@color/cardview_dark_background"
        app:allowDividerBelow="true"
        app:key="loc_cati"
        app:title="@string/Location">

        <ListPreference
            android:entries="@array/location"
            android:entryValues="@array/savelocation"
            app:key="location"
            app:summary="@string/DetermineLocationWithGPSOrSearch"
            app:defaultValue="true"
            app:title="@string/ChooseLocation" />
            <Preference
                app:key="displayLocation"
                app:summary="@string/searchbar"
                app:title="@string/LocationChosen"
                app:isPreferenceVisible="false"/>


    </PreferenceCategory>
    <PreferenceCategory
        app:key="Units"
        app:title="@string/Units"
        app:allowDividerBelow="true"
        android:icon="@color/cardview_dark_background">

        <ListPreference
            app:key="Temperature"
            app:title="@string/Temperature"
            app:summary="@string/ChooseUnitOfTemperature"
            android:entries="@array/unitOfTemperature"
            android:entryValues="@array/saveunitOfTemperature">
        </ListPreference>
        <ListPreference
            app:key="WindSpeed"
            app:title="@string/WindSpeed"
            app:summary="@string/ChooseUnitOfWindSpeed"
            android:entries="@array/unitsOfWindSpeed"
            android:entryValues="@array/saveunitsOfWindSpeed">
        </ListPreference>
    </PreferenceCategory>
    <PreferenceCategory
        app:key="Language"
        app:title="@string/Language"
        app:allowDividerBelow="true"
        android:icon="@color/cardview_dark_background">

        <ListPreference
            app:key="language"
            app:title="@string/Language"
            app:summary="@string/ChooseLanguage"
            android:entries="@array/chooseLanguage"
            android:entryValues="@array/saveLanguage">
        </ListPreference>

    </PreferenceCategory>
</PreferenceScreen>